--------------------------------------------------------------------------------
drkns 2025-06-14 18:40:00+01:00 - build 6494

1. Correction of 6454.

--------------------------------------------------------------------------------
drkns 2025-06-14 14:11:51+01:00 - build 6493

1. Correction of 6492.

--------------------------------------------------------------------------------
drkns 2025-06-12 17:46:46+01:00 - build 6492

1. Print command when needed.

--------------------------------------------------------------------------------
drkns 2025-06-11 22:13:04+01:00 - build 6491

1. Do not hide panels on far:config.

--------------------------------------------------------------------------------
drkns 2025-06-10 21:35:59+01:00 - build 6490

1. Continue gh-957.

2. Continue 6489.

--------------------------------------------------------------------------------
drkns 2025-06-09 19:44:33+01:00 - build 6489

1. Minor fixes for exotic environments.

--------------------------------------------------------------------------------
drkns 2025-06-07 23:53:11+01:00 - build 6488

1. gh-968: EditorReloadModal dialog: the [ Cancel ] button does the same as the { New instance } button

--------------------------------------------------------------------------------
yjh 2025-06-07 02:01:38+03:00 - build 6487

1. SQLite: v3.50.1.

--------------------------------------------------------------------------------
drkns 2025-06-05 10:55:24+01:00 - build 6486

1. Apply 6394 to unmounted volumes too.

2. Refactoring.

--------------------------------------------------------------------------------
yjh 2025-05-30 23:26:25+03:00 - build 6485

1. SQLite: v3.50.0.

--------------------------------------------------------------------------------
drkns 2025-05-27 17:18:29+01:00 - build 6484

1. Continue gh-957.

--------------------------------------------------------------------------------
drkns 2025-05-26 22:19:53+01:00 - build 6483

1. Continue gh-957. Cleaning up the stables.
