@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-06-15 03:05:35+01:00 - build 6495
+
+1. Improve codepage detection.
+
+--------------------------------------------------------------------------------
 drkns 2025-06-14 18:40:00+01:00 - build 6494
 
 1. Correction of 6454.
